# meloic

./: Cargo.toml  README.MD
src/: library.rs  main.rs  player.rs  ui.rs
src/ui/: app.rs  events.rs  help.rs  mod.rs  widgets.rs
