[package]
name = "meloic"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Huseynteymurzade28/meloic"
description = "A CLI music player written in Rust"
readme = "README.md"

[dependencies]
rodio = "0.18.1"
ratatui = { version = "0.27.0", features = ["crossterm"] }
crossterm = "0.27.0"
walkdir = "2.3"
rand = "0.8"
